(executable
 (name main)
 (modes js)
 (modules main base_locations)
 (libraries js_of_ocaml-lwt js_of_ocaml-tyxml yojson base64 cohttp-lwt-jsoo xml-light js_of_ocaml unix)
 (preprocess (pps lwt_ppx js_of_ocaml-ppx))
)

(env
  (dev
    (flags (:standard -g -w -16 -w -32 -w -52 -w -21 -w -26 -w -27 -w -37 -w -11 -w -33))
    (js_of_ocaml
     (compilation_mode whole_program)
     (flags --pretty --noinline --debug-info --source-map)
     ) 
  )
)


